# amazon_reviews_scraping

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
docker/mysql/docker-entrypoint-initdb.d/: .gitignore  createdb.example.sql  createdb.sql
docker/scraper/: Dockerfile  setup.sh
docker/scraper-botasaurus-request/: Dockerfile
docker/scraper-scrapy/: Dockerfile  setup.sh
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/database/: env.py
scraper/database/models/: __init__.py  reviews.py
scraper/database/versions/: 43e397060daa_create_reviews_model.py
scraper/spiders/: amazon_reviews.py  amazon_reviews_botasaurus_request.py
scraper/utils/: __init__.py  custom_botasaurus.py  proxy_string.py
scraper/utils/handlers/: rotating_proxies_download_handler.py
